--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="103dp"
         android:height="32dp"
         android:fontFamily="@font/inter_bold"
-        android:text="New Swaper"
+        android:text="New Swaperr"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
